# krita-grayscalizer

./: CMakeLists.txt  Grayscalizer.cc  Grayscalizer.h  GrayscalizerConfigurationBaseWidget.ui  GrayscalizerConfigurationWidget.cc  GrayscalizerConfigurationWidget.h  kritaGrayscalizer.desktop
